--- a/polymer-parent/angular4-seed/src/app/schema-editor/schema-editor.component.html
+++ b/polymer-parent/angular4-seed/src/app/schema-editor/schema-editor.component.html
@@ -18,7 +18,7 @@
          </div>
          <div class="content-body">
             <div class="code-editor-container">
-               <td-code-editor style="height: 200px" theme="vs" flex language="sql" [editorOptions]="{fontFamily:'Roboto Mono', formatOnType: true, folding: true, autoIndent: true}"
+               <td-code-editor theme="vs" flex language="sql" [editorOptions]="{fontFamily:'Roboto Mono', formatOnType: true, folding: true, autoIndent: true}"
                   [(ngModel)]="taxiDef" (change)="onTaxiDefChanged()"></td-code-editor>
             </div>
             <mat-expansion-panel>
