created result viewer

--- a/polymer-parent/vyne-app/src/app/query-wizard/query-wizard.component.html
+++ b/polymer-parent/vyne-app/src/app/query-wizard/query-wizard.component.html
@@ -2,7 +2,7 @@
   <span>Query wizard</span>
 </mat-toolbar>
 <div class="page-content">
-  <div class="fact-forms-container">
+  <div class="container fact-forms-container">
     <mat-card>
       <mat-card-header>
         <mat-card-title>Facts</mat-card-title>
@@ -19,18 +19,18 @@
               </mat-panel-description>
             </mat-expansion-panel-header>
 
-            <td-dynamic-forms [elements]="factForm.elements" #dynamicForm></td-dynamic-forms>
-
+            <div>
+              <td-dynamic-forms [elements]="getAndRegisterElements(factForm,dynamicForm)" #dynamicForm></td-dynamic-forms>
+            </div>
             <mat-action-row>
-              <button mat-button color="primary" (click)="updateFact(factForm,dynamicForm)">Update</button>
-              <button mat-button>Remove</button>
+              <button mat-button (click)="removeFact(factForm)">Remove</button>
             </mat-action-row>
           </mat-expansion-panel>
         </mat-accordion>
       </mat-card-content>
     </mat-card>
   </div>
-  <div class="target-type-container">
+  <div class="container target-type-container">
 
     <mat-card>
       <mat-card-header>
@@ -39,19 +39,36 @@
       <mat-card-content>
         <form>
           <mat-form-field class="target-type-input">
-            <input type="text" placeholder="Pick one" aria-label="Number" matInput [matAutocomplete]="auto"
-                   [formControl]="targetTypeInput">
+            <input type="text" placeholder="Select the type to discover" aria-label="Number" matInput
+                   [matAutocomplete]="auto"
+                   [formControl]="targetTypeInput" required>
             <mat-autocomplete #auto="matAutocomplete" autoActiveFirstOption>
               <mat-option *ngFor="let type of filteredTypes | async" [value]="type.name.fullyQualifiedName">
                 {{type.name.name}} ({{type.name.fullyQualifiedName}})
               </mat-option>
             </mat-autocomplete>
           </mat-form-field>
+          <mat-form-field>
+            <mat-select placeholder="Query mode" [formControl]="queryMode" required>
+              <mat-option value="DISCOVER">Discover (Find a single result)</mat-option>
+              <mat-option value="GATHER">Gather (Find all the possible results)</mat-option>
+            </mat-select>
+          </mat-form-field>
         </form>
       </mat-card-content>
       <mat-card-actions>
         <button mat-button color="primary" (click)="submitQuery()">Submit query</button>
       </mat-card-actions>
+    </mat-card>
+  </div>
+  <div class="container results-container">
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title>Results</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+          <query-result-display [result]="lastQueryResult"> </query-result-display>
+      </mat-card-content>
     </mat-card>
   </div>
 </div>
