--- a/polymer-parent/vyne-app/src/theme-colors.scss
+++ b/polymer-parent/vyne-app/src/theme-colors.scss
@@ -1,3 +1,21 @@
+$light-grey-1 : #ecf0f2;
+$light-grey-2 : #ced9de;
+$light-grey-3 : #aebfc9;
+$grey-1 : #8ea5b3;
+$grey-2 : #7592a2;
+$grey-3 : #5d7f92;
+$dark-grey-1 : #4a6572;
+$dark-grey-2 : #344955;
+$dark-grey-3 : #232F34;
+$dark-grey-4 : #304f63;
+
+$red-1: #e53935;
+$red-light: #ff6f60;
+$red-dark: #ab000d;
+
+$green: #16aa6d;
+
+
 $vyne-grey-blue-palette: (
   50 : #ecf0f2,
   100 : #ced9de,
