better results viewer

--- a/polymer-parent/vyne-app/src/app/query-wizard/query-wizard.component.html
+++ b/polymer-parent/vyne-app/src/app/query-wizard/query-wizard.component.html
@@ -67,7 +67,7 @@
         <mat-card-title>Results</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-          <query-result-display [result]="lastQueryResult"> </query-result-display>
+          <query-result-container [result]="lastQueryResult"> </query-result-container>
       </mat-card-content>
     </mat-card>
   </div>
