--- a/polymer-parent/vyne-app/src/app/query-wizard/result-display/result-container.component.scss
+++ b/polymer-parent/vyne-app/src/app/query-wizard/result-display/result-container.component.scss
@@ -65,10 +65,8 @@
   }
 }
 
-.results-container {
-  .result-card {
-    margin: 6px 0;
-  }
+.mat-card {
+  margin: 24px 0;
 }
 
 // Use these for border colors of nesting levels:
