--- a/polymer-parent/vyne-app/src/app/query-wizard/result-display/result-container.component.html
+++ b/polymer-parent/vyne-app/src/app/query-wizard/result-display/result-container.component.html
@@ -25,32 +25,53 @@
     </div>
   </div>
 
-  <mat-tree [dataSource]="nestedDataSource" [treeControl]="nestedTreeControl" class="results-tree">
-    <mat-nested-tree-node *matTreeNodeDef="let node;">
-      <div class="operation-container">
-        <div class="description">{{ node.operationName }}</div>
-        <div class="duration">{{ node.duration}}ms</div>
-        <div class="profile-step-results-container">
-
-        </div>
-        <div class="context-container">
-          <button mat-button *ngFor="let contextKey of objectKeys(node.context)">{{contextKey}}</button>
-
-        </div>
-        <div class="expand-button" *ngIf="hasChildren(node)" matTreeNodeToggle>
-          <div><span>{{ node.children.length }} more</span>
-            <button mat-icon-button>
-              <mat-icon class="mat-icon-rtl-mirror">
-                {{nestedTreeControl.isExpanded(node) ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}
-              </mat-icon>
-            </button>
-          </div>
-
-        </div>
-        <div [class.results-tree-invisible]="!nestedTreeControl.isExpanded(node)">
-          <ng-container matTreeNodeOutlet></ng-container>
-        </div>
+  <mat-card *ngIf="showMermaid">
+    <mat-card-header>
+      <mat-card-title>Remote calls</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <div class="mermaid-container">
+        <mermaid [chartDef]="remoteCallMermaid"></mermaid>
       </div>
-    </mat-nested-tree-node>
-  </mat-tree>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card *ngIf="result">
+    <mat-card-header>
+      <mat-card-title>Profiler</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <mat-tree [dataSource]="nestedDataSource" [treeControl]="nestedTreeControl" class="results-tree">
+        <mat-nested-tree-node *matTreeNodeDef="let node;">
+          <div class="operation-container">
+            <div class="description">{{ node.operationName }}</div>
+            <div class="duration">{{ node.duration}}ms</div>
+            <div class="profile-step-results-container">
+
+            </div>
+            <div class="context-container">
+              <button mat-button *ngFor="let contextKey of objectKeys(node.context)">{{contextKey}}</button>
+
+            </div>
+            <div class="expand-button" *ngIf="hasChildren(node)" matTreeNodeToggle>
+              <div><span>{{ node.children.length }} more</span>
+                <button mat-icon-button>
+                  <mat-icon class="mat-icon-rtl-mirror">
+                    {{nestedTreeControl.isExpanded(node) ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}
+                  </mat-icon>
+                </button>
+              </div>
+
+            </div>
+            <div [class.results-tree-invisible]="!nestedTreeControl.isExpanded(node)">
+              <ng-container matTreeNodeOutlet></ng-container>
+            </div>
+          </div>
+        </mat-nested-tree-node>
+      </mat-tree>
+    </mat-card-content>
+
+  </mat-card>
+
+
 </div>
